manifests/tunwatch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunwatch
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tunwatch
  ports:
    - name: http
      port: 8080
      targetPort: http
