manifests/tunwatch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nrt1-tunwatch
spec:
  defaultBackend:
    service:
      name: tunwatch
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - nrt1-tunwatch
